--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
@@ -45,13 +45,38 @@
           height: 450px;
           background-color: #ffffff;
           box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.7);
+          position: relative;
           border-radius: 1rem;
           overflow-y: scroll;
-          padding: 3px;
+          padding: 3px 0px;
           border: 1px solid gray;
           transition: all 0.2s ease-in-out;
           scroll-behavior: smooth;
 
+          .selected_gif{
+            position: absolute;
+            right: 2%;
+            top: 5%;
+            z-index: 800;
+
+            img{
+              width: 20px;
+              height: 20px;
+              mix-blend-mode: multiply;
+              filter: brightness(100%);
+            }
+          }
+          .touch_hand{
+            position: absolute;
+            z-index: 900;
+            left: 50%;
+            top: 50%;
+
+            img{
+              width: 45px;
+              height: 45px;
+            }
+          }
           .image_box {
             text-decoration: none;
             display: flex;
@@ -132,3 +157,8 @@
     }
   }
   
+
+  #templateSelected{
+    // background-color: rgb(108, 243, 137) !important;
+    border: 2px solid rgb(87, 249, 255);
+  }
