--- a/client/src/User_Admin_Dashboard/UserAdmin/UserAdmin.scss
+++ b/client/src/User_Admin_Dashboard/UserAdmin/UserAdmin.scss
@@ -10,25 +10,25 @@ overflow: hidden;
   height: 100vh;
   top: 0%;
   left:0%;
-  z-index: 900;
+  z-index: 1000;
   cursor: not-allowed;  
 
 /* HTML: <div class="loader"></div> */
 .form_loader {
 position: sticky;
-top: 0%;
+top: 8%;
 left: 0%;
 
 height: 3px;
-z-index: 900;
+z-index: 1000;
 border-radius: 5px;
 width:100%;
 --c:no-repeat linear-gradient(#4b2cff 0 0);
 background: var(--c),var(--c),#ffffff;
 background-size: 60% 100%;
-animation: l16 3s infinite;
+animation: lines 2s infinite;
 }
-@keyframes l16 {
+@keyframes lines {
 0%   {background-position:-150% 0,-150% 0}
 66%  {background-position: 250% 0,-150% 0}
 100% {background-position: 250% 0, 250% 0}
