--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
@@ -1,6 +1,6 @@
 .select_vcard_template_container {
     width: 100%;
-    height: auto;
+    height: 100%;
     padding: 1rem 2rem;
     overflow-y: scroll;
     margin: auto;
@@ -9,9 +9,11 @@
   
     .row_one {
       display: flex;
-      align-items: center;
-      justify-content: flex-start;
+      align-items: flex-start;
+      justify-content: space-between;
       width: 100%;
+    
+ 
   
    h6{
  font-size: 0.8rem;
@@ -22,8 +24,20 @@
       font-weight: bold;
     }
    }
+   button{
+    padding: 5px 1rem;
+    background: royalblue;
+    color: #ffff;
+    border-radius: 0.5rem;
+
+    &:hover{
+      box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
+    }
+   }
     }
     .row_two {
+      width: 100%;
+      height: auto;
       margin: 0.5rem 0rem 4rem 0rem;
       overflow: hidden;
   
@@ -44,12 +58,13 @@
           width: 100%;
           height: 450px;
           background-color: #ffffff;
-          box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.7);
+          box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
           position: relative;
-          border-radius: 1rem;
+          border-radius: 0.5rem;
           overflow-y: scroll;
-          padding: 3px 0px;
-          border: 1px solid gray;
+        padding: 5px;
+          border: 1px solid rgb(214, 214, 214);
+          opacity: 1;
           transition: all 0.2s ease-in-out;
           scroll-behavior: smooth;
 
@@ -83,18 +98,20 @@
             align-items: center;
             justify-content: center;
             width: 100%;
+      
             cursor: pointer;
      
   
             img {
               width: 100%;
-              border-radius: 1rem;
+              border-radius: 0.5rem;
               object-fit: cover;
               object-position: center;
               transform: translateY(0%);
               transition: all 10s ease;
               scroll-behavior: smooth;
               // margin-top: 2rem;
+              // padding: 5px;
             }
           }
           &::-webkit-scrollbar {
@@ -121,11 +138,102 @@
            
           
           }
-          // &:hover{
-          //   border: 2px solid rgb(255, 255, 255);
+          &:hover{
+            opacity: 0.8;
       
-          //   transition: all 0.2s ease-in-out;
-          // }
+            transition: all 0.2s ease-in-out;
+          }
+          
+        }
+        .free_image {
+          width: 20%;
+          height: 450px;
+          background-color: #ffffff;
+          box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
+          position: relative;
+          border-radius: 0.5rem;
+          overflow-y: scroll;
+        padding: 5px;
+          border: 1px solid rgb(214, 214, 214);
+          opacity: 1;
+          transition: all 0.2s ease-in-out;
+          scroll-behavior: smooth;
+
+          .selected_gif{
+            position: absolute;
+            right: 2%;
+            top: 5%;
+            z-index: 800;
+
+            img{
+              width: 20px;
+              height: 20px;
+              mix-blend-mode: multiply;
+              filter: brightness(100%);
+            }
+          }
+          .touch_hand{
+            position: absolute;
+            z-index: 900;
+            left: 50%;
+            top: 50%;
+
+            img{
+              width: 45px;
+              height: 45px;
+            }
+          }
+          .image_box {
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+      
+            cursor: pointer;
+     
+  
+            img {
+              width: 100%;
+              border-radius: 0.5rem;
+              object-fit: cover;
+              object-position: center;
+              transform: translateY(0%);
+              transition: all 10s ease;
+              scroll-behavior: smooth;
+              // margin-top: 2rem;
+              // padding: 5px;
+            }
+          }
+          &::-webkit-scrollbar {
+            width: 0px;
+            height: 0px;
+            background-color: #ffffff;
+            border-radius: 5px;
+          }
+          &::-webkit-scrollbar-thumb {
+            background: #d37ffa;
+            border-radius: 2px;
+          }
+          &:hover{
+              // height: 1500px;
+              scroll-behavior: smooth;
+  
+         
+                  img{
+                      transform: translateY(-80%);
+                      // transition: height 2s;
+                      transition: all 10s ease;
+                      scroll-behavior: smooth;
+                  }
+           
+          
+          }
+          &:hover{
+            opacity: 0.8;
+      
+            transition: all 0.2s ease-in-out;
+          }
           
         }
           &::-webkit-scrollbar {
@@ -136,10 +244,34 @@
       border-radius: 5px;
     }
       }
+      .noplans{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p{
+          font-weight: 500;
+          color: red;
+          animation: hideshow 1s infinite;
+          @keyframes hideshow {
+            from{
+             opacity: 0;
+            }
+            to{
+             opacity: 1;
+            }
+         }
+        }
+
+   
+      }
     }
     .row_3{
       width: 100%;
-      position: absolute;
+      height: auto;
+      position: relative;
       bottom: 0%;
       right: 0%;
       // margin-top: 3rem;
@@ -160,5 +292,6 @@
 
   #templateSelected{
     // background-color: rgb(108, 243, 137) !important;
-    border: 2px solid rgb(87, 249, 255);
+    border: 2px solid rgb(47, 222, 235);
+    opacity: 0.7;
   }
