--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
@@ -55,7 +55,7 @@
         // place-items: center;
   
         .image {
-          width: 100%;
+          width: 100% !important;
           height: 450px;
           background-color: #ffffff;
           box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
@@ -98,7 +98,7 @@
             align-items: center;
             justify-content: center;
             width: 100%;
-      
+   
             cursor: pointer;
      
   
@@ -146,7 +146,7 @@
           
         }
         .free_image {
-          width: 20%;
+          width: 20% !important;
           height: 450px;
           background-color: #ffffff;
           box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
@@ -291,7 +291,37 @@
   
 
   #templateSelected{
+    width: 100%;
     // background-color: rgb(108, 243, 137) !important;
-    border: 2px solid rgb(47, 222, 235);
-    opacity: 0.7;
+    border: 2px solid rgb(240, 240, 240);
+    opacity: 1;
+  }
+
+  #templateUnselected{
+   opacity: 0.7;
+   cursor:not-allowed;
+   display: none;
+   border: none;
+   
+  }
+
+  #selected{
+   display: block !important;
+  }
+
+  #saved{
+    display: block !important;
+  }
+  #unsaved{
+    display: block !important;
+
+  }
+#unselected{
+  display: block !important;
+}
+  #savedTemplate{
+    display: block !important;
+  }
+  #UnsavedTemplate{
+ opacity: 0;
   }
