--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/User_VCards.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/User_VCards.scss
@@ -67,11 +67,11 @@
           
            
             th{
-          
+              padding: 0.7rem 0.5rem;
               background-color: #F8F9FA;
               font-size: 0.9rem;
-      
-              color: rgb(46, 46, 46);
+  font-weight: 550 !important;
+              color: rgb(27, 27, 27);
             }
           }
         }
@@ -83,16 +83,55 @@
    
            
             td{
-          
-            
-      
-            
-          
               padding: 1rem 0.5rem;
-              font-size: 0.8rem;
-              font-weight: 500;
+              font-size: 0.8rem; 
+              vertical-align: middle;
+           font-weight: 500 !important;
               color: rgb(99, 99, 99);
+              border-bottom: 1px solid rgb(230, 230, 230);
+
+              i:nth-child(1){
+                font-size: 1.5rem;
+                padding-left: 10px;
+                color: tomato;
+                cursor: pointer;
+
+                &:hover{
+                  color: gray;
+                }
+              }
+              i:nth-child(2){
+                font-size: 1.5rem;
+                padding-left: 10px;
+                color: royalblue;
+                cursor: pointer;
+
+                &:hover{
+                  color: rgb(0, 0, 0);
+                }
+              }
+
+              &:nth-child(3){
+         
+                padding: 5px 10px;
+                vertical-align: middle;
+                color: green;
+                font-weight: 550;
+                font-size: 0.9rem;
+              }
+              &:nth-child(2){
+                 a{
+                  text-decoration: none;
+                 }
+              }
+              &:nth-child(4){
+             i{
+              font-size: 1.5rem;
+              color: #6571FF;
+             }
+             }
             }
+            
           }
         }
       }
