--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Gallery.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Gallery.scss
@@ -3,6 +3,21 @@
     width: 100%;
     height: 100%;
     padding: 1rem;
+    .plan_title{
+      p{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    
+        font-size: 0.8rem;
+        font-weight: bold;
+    
+        strong{
+          color: green;
+        }
+    
+      }
+    }
     .add_new_gallery {
       display: flex;
       align-items: center;
@@ -196,6 +211,13 @@
               font-weight: 500;
               color: gray;
             }
+            p{
+              font-size: 0.7rem;
+font-weight: 550;
+              strong{
+                color: red;
+              }
+            }
             input {
               padding: 10px 1rem;
               border: 1px solid rgb(165, 165, 165);
@@ -208,7 +230,10 @@
               }
             }
             input[type="file"] {
-              display: none;
+              width: 100%;
+              display: block;
+              padding: 10px 0px;
+              font-size: 0.8rem;border: none;
             }
             textarea {
               padding: 10px 1rem;
