--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Products.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Products.scss
@@ -3,6 +3,21 @@
     width: 100%;
     height: 100%;
     padding: 1rem;
+    .product_plan_title{
+      p{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    
+        font-size: 0.8rem;
+        font-weight: bold;
+    
+        strong{
+          color: green;
+        }
+    
+      }
+    }
     .add_new_product {
       display: flex;
       align-items: center;
@@ -217,7 +232,10 @@
               }
             }
             input[type="file"] {
-              display: none;
+              width: 100%;
+              display: block;
+              padding: 10px 0px;
+              font-size: 0.8rem;border: none;
             }
             textarea {
               padding: 10px 1rem;
