--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Select_Template.scss
@@ -46,23 +46,114 @@
       .image_container {
         display: grid;
         width: 100%;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
         // grid-template-columns: 1fr 1fr 1fr;
         grid-row-gap: 2rem;
-        grid-column-gap: 2rem;
+        grid-column-gap: 1rem;
         margin-bottom: 2rem;
     
         // place-items: center;
   
         .image {
           width: 100% !important;
-          height: 450px;
+          height: 500px;
           background-color: #ffffff;
-          box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
           position: relative;
           border-radius: 0.5rem;
           overflow-y: scroll;
-        padding: 5px;
+        padding: 0px;
+          border: 1px solid rgb(214, 214, 214);
+          opacity: 1;
+          transition: all 0.2s ease-in-out;
+          scroll-behavior: smooth;
+
+          .selected_gif{
+            position: absolute;
+            right: 2%;
+            top: 5%;
+            z-index: 800;
+
+            img{
+              width: 20px;
+              height: 20px;
+              mix-blend-mode: multiply;
+              filter: brightness(100%);
+            }
+          }
+          .touch_hand{
+            position: absolute;
+            z-index: 900;
+            left: 50%;
+            top: 50%;
+
+            img{
+              width: 45px;
+              height: 45px;
+            }
+          }
+          .image_box {
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+   
+            cursor: pointer;
+     
+  
+            img {
+              width: 100%;
+              border-radius: 0.5rem;
+              object-fit: cover;
+              object-position: center;
+              transform: translateY(0%);
+              transition: all 10s ease;
+              scroll-behavior: smooth;
+              // margin-top: 2rem;
+              // padding: 5px;
+            }
+          }
+          &::-webkit-scrollbar {
+            width: 0px;
+            height: 0px;
+            background-color: #ffffff;
+            border-radius: 5px;
+          }
+          &::-webkit-scrollbar-thumb {
+            background: #d37ffa;
+            border-radius: 2px;
+          }
+          &:hover{
+              // height: 1500px;
+              scroll-behavior: smooth;
+  
+         
+                  img{
+                      transform: translateY(-80%);
+                      // transition: height 2s;
+                      transition: all 10s ease;
+                      scroll-behavior: smooth;
+                  }
+           
+          
+          }
+          &:hover{
+            opacity: 0.8;
+      
+            transition: all 0.2s ease-in-out;
+          }
+          
+        }
+        .single_template {
+          width: 20% !important;
+          height: 500px;
+          background-color: #ffffff;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+          position: relative;
+          border-radius: 0.5rem;
+          overflow-y: scroll;
+        padding: 0px;
           border: 1px solid rgb(214, 214, 214);
           opacity: 1;
           transition: all 0.2s ease-in-out;
@@ -146,14 +237,14 @@
           
         }
         .free_image {
-          width: 20% !important;
-          height: 450px;
+          width: 25% !important;
+          height: 510px;
           background-color: #ffffff;
-          box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
           position: relative;
           border-radius: 0.5rem;
           overflow-y: scroll;
-        padding: 5px;
+        padding: 0px;
           border: 1px solid rgb(214, 214, 214);
           opacity: 1;
           transition: all 0.2s ease-in-out;
@@ -236,6 +327,7 @@
           }
           
         }
+       
           &::-webkit-scrollbar {
     display: none;
     }
