--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form.scss
@@ -70,77 +70,18 @@
       padding: 0rem 0rem 1rem 0.4rem;
 
    
-
-        .menu_item:nth-child(6){
-
-          &:hover{
-            cursor: not-allowed;
-            opacity: 0.4;
-            background-color: none !important;
-            // border-left: 4px solid #6571ff;
-            border-top-left-radius:4px;
-            border-bottom-left-radius: 4px;
-            transition: all 0.1s ease;
-        }
-        }
-        .menu_item:nth-child(8){
-
-          &:hover{
-            cursor: not-allowed;
-            opacity: 0.4;
-            background-color: none !important;
-            // border-left: 4px solid #6571ff;
-            border-top-left-radius:4px;
-            border-bottom-left-radius: 4px;
-            transition: all 0.1s ease;
-        }
-        }
-        .menu_item:nth-child(9){
-
-          &:hover{
-            cursor: not-allowed;
-            opacity: 0.4;
-            background-color: none !important;
-            // border-left: 4px solid #6571ff;
-            border-top-left-radius:4px;
-            border-bottom-left-radius: 4px;
-            transition: all 0.1s ease;
-        }
-        }
-        .menu_item:nth-child(12){
-
-          &:hover{
-            cursor: not-allowed;
-            opacity: 0.4;
-            background-color: none !important;
-            // border-left: 4px solid #6571ff;
-            border-top-left-radius:4px;
-            border-bottom-left-radius: 4px;
-            transition: all 0.1s ease;
-        }
-        }
-        .menu_item:nth-child(15){
-
-          &:hover{
-            cursor: not-allowed;
-            opacity: 0.4;
-            background-color: none !important;
-            // border-left: 4px solid #6571ff;
-            border-top-left-radius:4px;
-            border-bottom-left-radius: 4px;
-            transition: all 0.1s ease;
-        }
-        }
+ 
       .menu_item {
         display: flex;
         align-items: center;
         justify-content: flex-start;
         gap: 1rem;
         width: 100%;
+        opacity: 1 !important;
         padding: 15px 0.5rem 15px 20px;
         transition: all 0.1s ease;
         margin-bottom: 10px;
-        cursor: pointer;
+        cursor: pointer !important;
 
         i {
           font-size: 1.3rem;
@@ -152,8 +93,8 @@
         }
 
         &:hover{
-            background-color: #cdf9ff;
-            border-left: 4px solid #6571ff;
+            background-color: #cdf9ff !important;
+            border-left: 4px solid #6571ff !important;
             border-top-left-radius:4px;
             border-bottom-left-radius: 4px;
             transition: all 0.1s ease;
@@ -196,8 +137,8 @@
 //Menu Active Style
 
 #menu_active{
-    background-color: #cdf9ff;
-    border-left: 4px solid #6571ff;
+    background-color: #cdf9ff !important;
+    border-left: 4px solid #6571ff !important;
     border-top-left-radius:4px;
     border-bottom-left-radius: 4px;
     transition: all 0.1s ease;
