--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form.scss
@@ -21,7 +21,7 @@
       button {
         padding: 8px 1rem;
         outline: none;
-     
+
         border: 1px solid #6571ff;
         color: #6571ff;
         outline: none;
@@ -30,7 +30,7 @@
         font-weight: 400;
         transition: all 0.3s ease;
         &:hover {
-            background-color: #6571ff;
+          background-color: #6571ff;
           color: #ffffff;
           border: transparent;
         }
@@ -51,12 +51,11 @@
     overflow: scroll;
     position: relative;
 
- 
     // SideNav Style
     .form_sidenav {
-        position: sticky;
-        left: 0%;
-        top: 0%;
+      position: sticky;
+      left: 0%;
+      top: 0%;
       display: flex;
       flex-direction: column;
       flex: 0.2;
@@ -64,13 +63,11 @@
       height: 100%;
       align-items: center;
       justify-content: flex-start;
-    //   background-color: #e0f6fd;
+      //   background-color: #e0f6fd;
       // border-right: 1px solid rgb(199, 199, 199);
       overflow-y: scroll;
       padding: 0rem 0rem 1rem 0.4rem;
 
-   
- 
       .menu_item {
         display: flex;
         align-items: center;
@@ -92,18 +89,40 @@
           color: #424040;
         }
 
-        &:hover{
-            background-color: #cdf9ff !important;
-            border-left: 4px solid #6571ff !important;
-            border-top-left-radius:4px;
-            border-bottom-left-radius: 4px;
-            transition: all 0.1s ease;
+        &:hover {
+          background-color: #cdf9ff !important;
+          border-left: 4px solid #6571ff !important;
+          border-top-left-radius: 4px;
+          border-bottom-left-radius: 4px;
+          transition: all 0.1s ease;
+        }
+      }
+      .progressing {
+        width: 100%;
+        border-top: 1px solid rgb(171, 245, 255);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        gap: 10px;
+        small {
+          font-size: 0.8rem;
+          color: royalblue;
+          font-weight: 500;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+        }
+        i{
+          color: green;
+          font-size: 1.3rem
         }
       }
 
       &::-webkit-scrollbar {
         width: 4px;
-      
+
         background-color: rgb(255, 255, 255);
         border-radius: 5px;
       }
@@ -133,13 +152,12 @@
   }
 }
 
-
 //Menu Active Style
 
-#menu_active{
-    background-color: #cdf9ff !important;
-    border-left: 4px solid #6571ff !important;
-    border-top-left-radius:4px;
-    border-bottom-left-radius: 4px;
-    transition: all 0.1s ease;
+#menu_active {
+  background-color: #cdf9ff !important;
+  border-left: 4px solid #6571ff !important;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  transition: all 0.1s ease;
 }
