--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Banner.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Banner.scss
@@ -147,6 +147,9 @@
                 font-size: 0.9rem;
               }
               .save{
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 background-color: royalblue;
                 color: #fff;
                 transition: all 0.3s ease;
