--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Gallery.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Gallery.scss
@@ -3,6 +3,44 @@
     width: 100%;
     height: 100%;
     padding: 1rem;
+
+    .Image_Full_view{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      width: 500px;
+      height: 350px;
+      background-color: #fff;
+      border-radius: 0.5rem;
+      z-index: 900;
+      box-shadow: 0px 4px 5px rgba(0,0,0,0.3);
+
+      .close_image{
+        position: absolute;
+        top: 5%;
+        right: 4%;
+
+        i{
+          font-size: 1.5rem;
+          cursor: pointer;
+          color:rgb(226, 57, 57);
+          transition: all 0.4s ease-in-out;
+          &:hover{
+            box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
+            scale: 1.05;
+            transition: all 0.4s ease-in-out;
+          }
+        }
+      }
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 0.5rem;
+      }
+    }
     .plan_title{
       p{
         display: flex;
@@ -81,6 +119,7 @@
                 font-size: 1.5rem;
                 margin-right: 10px;
                 cursor: pointer;
+                color: green;
   
                 &:hover {
                   filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.3));
