--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Products.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/Products.scss
@@ -66,7 +66,7 @@
             td {
               padding: 0.5rem;
               font-size: 0.8rem;
-              font-weight: bold;
+              font-weight: 500;
               color: rgb(105, 105, 105);
   
               img {
@@ -86,6 +86,11 @@
                 &:hover {
                   filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.3));
                 }
+              }
+
+              a{
+                text-decoration: none;
+                font-weight: 500;
               }
             }
           }
@@ -232,10 +237,11 @@
               }
             }
             input[type="file"] {
-              width: 100%;
-              display: block;
-              padding: 10px 0px;
-              font-size: 0.8rem;border: none;
+              // width: 100%;
+              // display: block;
+              // padding: 10px 0px;
+              // font-size: 0.8rem;border: none;
+              display: none;
             }
             textarea {
               padding: 10px 1rem;
