--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Products.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Products.scss
@@ -50,6 +50,17 @@
       width: 100%;
   
       table {
+        p{
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          padding: 10px;
+          width: 100%;
+          font-size: 0.8rem;
+          font-weight: 550;
+          color: tomato;
+          vertical-align: middle;
+        }
         thead {
           tr {
             th {
@@ -71,7 +82,9 @@
   
               img {
                 width: 80px;
-                height: 50px;
+                height: 60px;
+                box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
+                border: 1px solid lightcyan;
                 border-radius: 5px;
                 object-fit: cover;
                 object-position: center;
@@ -115,7 +128,7 @@
         background-color: #6571ff;
       }
     }
-  
+  //Product nnew form
     .create_new_product_container {
       .create_new_product_box {
         position: fixed;
@@ -220,6 +233,13 @@
               font-weight: 500;
               color: gray;
             }
+            p{
+              font-size: 0.8rem;
+              font-weight: 500;
+              strong{
+                color: red;
+              }
+            }
             input {
               padding: 10px 1rem;
               border: 1px solid rgb(165, 165, 165);
@@ -232,10 +252,11 @@
               }
             }
             input[type="file"] {
-              width: 100%;
-              display: block;
-              padding: 10px 0px;
-              font-size: 0.8rem;border: none;
+              display: none;
+              // width: 100%;
+              // display: block;
+              // padding: 10px 0px;
+              // font-size: 0.8rem;border: none;
             }
             textarea {
               padding: 10px 1rem;
@@ -292,19 +313,349 @@
           }
         }
       }
+
+    }
+    //Update Product form
+    .update_new_product_container {
+      .create_new_product_box {
+        position: fixed;
+        top: 20%;
+        left: 50%;
+        transform: translate(-50%, -10%);
+        width: 50%;
+        margin: 1rem auto;
+        padding: 1rem;
+        place-items: center;
+        min-width: 400px;
+        height: auto;
+        background-color: #fff;
+        box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+  
+        .title {
+          display: flex;
+          align-self: center;
+          justify-content: space-between;
+          width: 100%;
+  
+          height: 50px;
+          border-bottom: 1px solid rgb(231, 231, 231);
+  
+          p {
+            font-weight: 500;
+            font-size: 1.1rem;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+  
+          i {
+            font-size: 2rem;
+            color: gray;
+            // height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+  
+            &:hover {
+              color: red;
+            }
+          }
+        }
+  
+        form {
+          margin: 1rem auto;
+        //   display: flex;
+        //   flex-direction: column;
+        //   align-items: flex-start;
+        //   justify-content: flex-start;
+        display: grid;
+        grid-template-columns: repeat(auto-fit , minmax(250px,1fr));
+        grid-row-gap: 0.5rem;
+        grid-column-gap: 1.5rem;
+        place-items: start;
+          width: 100%;
+  
+          .form_group {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            width: 100%;
+            margin-bottom: 1rem;
+ 
+            label {
+              font-size: 0.9rem;
+              font-weight: 500;
+              position: relative;
+           
+              sup {
+                color: red;
+                padding-left: 5px;
+              }
+  
+           
+              img {
+                width: 150px;
+                height: 100px;
+                object-fit: cover;
+                object-position: center;
+                border: 1px solid rgb(165, 165, 165);
+                border-radius: 5px;
+                cursor: pointer;
+                filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.3));
+              }
+              i {
+                position: absolute;
+                font-size: 1.6rem;
+                right: 0%;
+                top: -15%;
+                color: #6571ff;
+              }
+            }
+            small {
+              font-size: 0.7rem;
+              font-weight: 500;
+              color: gray;
+            }
+            p{
+              font-size: 0.8rem;
+              font-weight: 500;
+              strong{
+                color: red;
+              }
+            }
+            input {
+              padding: 10px 1rem;
+              border: 1px solid rgb(165, 165, 165);
+              outline: none;
+              border-radius: 5px;
+              width: 100%;
+  
+              &::placeholder {
+                font-size: 0.8rem;
+              }
+            }
+            input[type="file"] {
+              display: none;
+              // width: 100%;
+              // display: block;
+              // padding: 10px 0px;
+              // font-size: 0.8rem;border: none;
+            }
+            textarea {
+              padding: 10px 1rem;
+              border: 1px solid rgb(165, 165, 165);
+              outline: none;
+              border-radius: 5px;
+              width: 100%;
+  
+              &::placeholder {
+                font-size: 0.8rem;
+              }
+            }
+          }
+ 
+        
+          .form_submit_actions {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            grid-column: 1/-1;
+            justify-content: flex-end;
+            gap: 1rem;
+  
+            .save {
+              button {
+                outline: none;
+                padding: 8px 1rem;
+                border: transparent;
+                background-color: #6571ff;
+                border-radius: 5px;
+                color: #fff;
+                transition: all 0.3s ease;
+                &:hover {
+                  background-color: #8992fc;
+                  transition: all 0.3s ease;
+                }
+              }
+            }
+            .discard {
+              button {
+                outline: none;
+                padding: 8px 1rem;
+                border: transparent;
+                background-color: #727272;
+                border-radius: 5px;
+                color: #fff;
+                transition: all 0.3s ease;
+                &:hover {
+                  background-color: #9c9c9c;
+                  transition: all 0.3s ease;
+                }
+              }
+            }
+          }
+        }
+      }
+      
+    }
+    .view_new_service_container {
+      .view_new_service_box {
+        position: fixed;
+        top: 15%;
+        left: 50%;
+        transform: translate(-50%, -10%);
+        width: 30%;
+        margin: 1rem auto;
+        padding: 1rem;
+        place-items: center;
+        min-width: 400px;
+        height: auto;
+        background-color: #fff;
+        box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+  
+        .title {
+          display: flex;
+          align-self: center;
+          justify-content: space-between;
+          width: 100%;
+  
+          height: 50px;
+          border-bottom: 1px solid rgb(231, 231, 231);
+  
+          p {
+            font-weight: 550;
+            font-size: 1.1rem;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+  
+          i {
+            font-size: 2rem;
+            color: gray;
+            // height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+  
+            &:hover {
+              color: red;
+            }
+          }
+        }
+        .details_container {
+          padding: 1rem 5px;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 10px;
+          .service_image {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .service_image {
+              padding: 10px 0.5rem;
+              img {
+                width: 150px;
+                height: 80px;
+                border-radius: 10px;
+                box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.4);
+                object-fit: cover;
+                object-position: center;
+              }
+            }
+          }
+          .service_name {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .name{
+              padding: 10px 0.5rem;
+              p{
+                font-size: 0.8rem;
+                font-weight: 550;
+              }
+            }
+         
+          }
+          .service_desc {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .name{
+              padding: 10px 0.5rem;
+              p{
+                font-size: 0.8rem;
+                font-weight: 550;
+              }
+            }
+         
+          }
+          .service_url{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .name{
+              padding: 10px 0.5rem;
+             
+              a{
+                text-decoration: none;
+                font-size: 0.8rem;
+              }
+            }
+         
+          }
+        }
+      }
     }
   }
   
   //Service Form Open::after
   
   #productOpen {
-    opacity: 1;
+    display: block;
     scale: 1;
     transition: all 0.4s ease-in;
   }
   
   #productClose {
-    opacity: 0;
+    display: none;
     scale: 0.9;
     transition: all 0.2s ease-in;
   }
