--- a/client/src/User_Admin_Dashboard/UserAdmin/UserAdmin.scss
+++ b/client/src/User_Admin_Dashboard/UserAdmin/UserAdmin.scss
@@ -43,7 +43,7 @@ animation: lines 2s infinite;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    background-color: #d0faf1;
+    background-color: #EFF3F7;
 
 
     .content_left {
@@ -56,7 +56,7 @@ animation: lines 2s infinite;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      background-color:#d0faf1;
+      background-color:#FFFFFF;
       border-top: 1px solid rgb(238, 238, 238);
       border-right: 1px solid rgb(255, 255, 255);
       filter: drop-shadow(0px 4px 5px rgba(211, 211, 211, 0.5));
