--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/BasicForm.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/All_Form_Component/form_styles/BasicForm.scss
@@ -81,6 +81,10 @@
         input[type="file"] {
           display: none;
         }
+
+        &:nth-child(1){
+          grid-column: 1/-1;
+        }
       }
       .double_col_inputs {
         display: flex;
