--- a/client/src/User_Admin_Dashboard/User_Admin_SideNav/User_Admin_SideNavBar.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_SideNav/User_Admin_SideNavBar.scss
@@ -59,7 +59,7 @@
     // padding: 1rem 0px;
     z-index: 1000;
     .menu {
-      width: 90%;
+      width: 100%;
       height: 100%;
       position: relative;
       display: flex;
@@ -77,7 +77,7 @@
         cursor: pointer;
         padding: 8px 0.5rem;
         text-decoration: none;
-        border-radius: 5px;
+        // border-radius: 5px;
         // background-color: #ffffff;
         // box-shadow: 0px 4px 4px rgba(0,0,0,0.3);
         // -webkit-box-shadow: -1px 3px 15px -8px rgba(92, 92, 92, 1);
@@ -126,8 +126,8 @@
         }
 
         &:hover {
-          background-color: #ffffff;
-          border-left: 4px solid #17c1e8;
+          background-color: #E0E3FF;
+          border-left: 4px solid #a361fa;
         }
       }
     }
@@ -195,22 +195,24 @@
 }
 
 .activeMenu {
-  background-color: #ffffff;
-  border-left: 4px solid #17c1e8;
+  background-color: #E0E3FF;
+  border-left: 4px solid #a361fa;
   display: flex;
   align-self: center;
   justify-content: flex-start;
 
 
   i {
-    background-color: #17c1e8 !important;
+    background-color:none !important;
     border-radius: 5px;
-    color: #ffffff !important;
+    background: none !important;
+    color: #6220fd !important;
   }
   .i {
     font-size: 1.9rem;
-    background-color: #17c1e8 !important;
+    background-color: none !important;
+    background: none !important;
     border-radius: 5px;
-    color: #ffffff !important;
+    color: #6220fd !important;
   }
 }
