--- a/client/src/User_Admin_Dashboard/User_Admin_Top_Nav/User_Admin_TopNavBar.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_Top_Nav/User_Admin_TopNavBar.scss
@@ -4,7 +4,7 @@ position: fixed;
 top: 0%;
 left: 0%;
 height: 8vh;
-background-color: #fff;
+background-color: #FFFFFF;
 // z-index: 1000;
 border-bottom: 0.5px solid rgb(236, 236, 236);
 box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
